Fixed alignment on about.html

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -252,6 +252,9 @@ input[type="reset"]:hover {
 
 .contribution {
   margin-top: 100px;
+  height: auto;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
 }
 
 .text-contribution {
